tests/baselines/reference/asyncFunctionDeclaration9_es5.errors.txt
asyncFunctionDeclaration9_es5.ts(2,19): error TS1109: Expression expected.


==== asyncFunctionDeclaration9_es5.ts (1 errors) ====
    async function foo(): Promise<void> {
      var v = { [await]: foo }
                      ~
!!! error TS1109: Expression expected.
    }